--- a/.gitmodules
+++ b/.gitmodules
@@ -57,7 +57,7 @@
 [submodule "third_party/cpuinfo"]
     ignore = dirty
     path = third_party/cpuinfo
-    url = https://github.com/pytorch/cpuinfo.git
+    url = https://github.com/loongson/cpuinfo.git
 [submodule "third_party/python-enum"]
     ignore = dirty
     path = third_party/python-enum
@@ -81,7 +81,8 @@
 [submodule "third_party/sleef"]
     ignore = dirty
     path = third_party/sleef
-    url = https://github.com/shibatch/sleef
+    url = https://github.com/loongson/sleef.git
+    branch = e0a003e-la
 [submodule "third_party/ideep"]
     ignore = dirty
     path = third_party/ideep
